k8s/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-A
  namespace: myapp
spec:
  type: ClusterIP
  selector:
    app: service-A
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
