k8s/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-B
  namespace: myapp
spec:
  type: ClusterIP
  selector:
    app: service-B
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
