k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: myapp
spec:
  rules:
  - host: 192.168.49.2
    http:
      paths:
      - path: /service-A
        pathType: Prefix
        backend:
          service:
            name: service-A
            port:
              number: 80
      - path: /service-B
        pathType: Prefix
        backend:
          service:
            name: service-B
            port:
              number: 80
