k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-a-to-b
  namespace: myapp
spec:
  podSelector:
    matchLabels:
      app: service-A
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: service-B
    ports:
    - protocol: TCP
      port: 80
